# transcriber

./: .gitignore  LICENSE  README.md  interview_transcriber.py  pyproject.toml  transcriber.py
.github/workflows/: ci.yml  pr-review.yml
assets/: gen_demo.py
examples/: redacted-transcript.md
tests/: test_interview_transcriber.py  test_transcriber.py
